--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -25,8 +25,22 @@
 /*----------------------------------------------------*/
 @import "home_1/hero";
 /*---------------------------------------------------- */
-
-
+/*About area*/
+/*----------------------------------------------------*/
+@import "home_1/about";
+/*---------------------------------------------------- */
+/*Service area*/
+/*----------------------------------------------------*/
+@import "home_1/service";
+/*---------------------------------------------------- */
+/*Solution area*/
+/*----------------------------------------------------*/
+@import "home_1/solution";
+/*---------------------------------------------------- */
+/*Team area*/
+/*----------------------------------------------------*/
+@import "home_1/team";
+/*---------------------------------------------------- */
 
 
 /*Footer Section*/
