--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -41,6 +41,18 @@
 /*----------------------------------------------------*/
 @import "home_1/team";
 /*---------------------------------------------------- */
+/*work process area*/
+/*----------------------------------------------------*/
+@import "home_1/work-p";
+/*---------------------------------------------------- */
+/*Why choose area*/
+/*----------------------------------------------------*/
+@import "home_1/why-c";
+/*---------------------------------------------------- */
+/*Testimonial area*/
+/*----------------------------------------------------*/
+@import "home_1/testi";
+/*---------------------------------------------------- */
 
 
 /*Footer Section*/
