--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -745,6 +745,9 @@ a:hover, a:focus {
     font-size: 30px;
   }
 }
+.st-sec-title p {
+  padding-top: 22px;
+}
 
 .mt-5 {
   margin-top: 5px;
@@ -2900,6 +2903,335 @@ a:hover, a:focus {
       -ms-flex-pack: center;
           justify-content: center;
   background-color: #F3F3F3;
+}
+
+/*---------------------------------------------------- */
+/*work process area*/
+/*----------------------------------------------------*/
+.st-wrkp-sec {
+  padding-left: 24px;
+  padding-right: 24px;
+}
+@media only screen and (min-width: 768px) and (max-width: 991px), only screen and (min-width: 576px) and (max-width: 767px), only screen and (min-width: 481px) and (max-width: 575px), (max-width: 480px) {
+  .st-wrkp-sec {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+}
+.st-wrkp-sec .st-sec-title {
+  margin: 0 auto;
+  max-width: 760px;
+}
+.st-wrkp-sec .st-sec-title p {
+  margin: 0 auto;
+}
+
+.st-wrkp-content {
+  gap: 8px;
+}
+@media only screen and (min-width: 768px) and (max-width: 991px), only screen and (min-width: 576px) and (max-width: 767px), only screen and (min-width: 481px) and (max-width: 575px), (max-width: 480px) {
+  .st-wrkp-content {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+}
+
+.st-wrkp-img .item-img {
+  border-radius: 16px;
+}
+
+.st-wrkp-steps-wrap {
+  width: 100%;
+  height: 600px;
+  overflow: hidden;
+  max-width: 715px;
+  border-radius: 16px;
+  padding-top: 80px;
+  padding-left: 55px;
+}
+@media only screen and (min-width: 768px) and (max-width: 991px), only screen and (min-width: 576px) and (max-width: 767px), only screen and (min-width: 481px) and (max-width: 575px), (max-width: 480px) {
+  .st-wrkp-steps-wrap {
+    max-width: 100%;
+  }
+}
+@media (max-width: 480px) {
+  .st-wrkp-steps-wrap {
+    padding-left: 0px;
+  }
+}
+.st-wrkp-steps-wrap .mCSB_scrollTools {
+  top: 0;
+  left: 0;
+  max-height: 400px;
+}
+.st-wrkp-steps-wrap .mCustomScrollBox {
+  padding-left: 80px;
+}
+@media (max-width: 480px) {
+  .st-wrkp-steps-wrap .mCustomScrollBox {
+    padding-left: 30px;
+  }
+}
+.st-wrkp-steps-wrap .mCSB_scrollTools .mCSB_draggerRail {
+  width: 8px;
+  background-color: rgba(255, 255, 255, 0.1607843137);
+}
+.st-wrkp-steps-wrap .mCSB_scrollTools .mCSB_dragger .mCSB_dragger_bar {
+  width: 8px;
+  background-color: var(--st-prime-c2);
+}
+
+.st-wrkp-item {
+  width: 100%;
+  height: 380px;
+  padding: 12px;
+  max-width: 340px;
+  margin-bottom: 40px;
+  border-radius: 8px;
+  background-color: #EEEEEE;
+}
+.st-wrkp-item .inner-item {
+  background-color: #FFFFFF;
+  border-top-left-radius: 8px;
+  border-top-right-radius: 8px;
+  border-bottom-left-radius: 63px;
+  border-bottom-right-radius: 63px;
+}
+.st-wrkp-item .item-serial {
+  color: #EEEEEE;
+  line-height: 0.7;
+  font-size: 68px;
+  font-weight: 800;
+  margin-bottom: 32px;
+  border-radius: 8px;
+  font-family: var(--st-heading);
+}
+.st-wrkp-item .item-text h3 {
+  font-size: 20px;
+  font-weight: 600;
+  padding-bottom: 12px;
+}
+.st-wrkp-item .item-text p {
+  color: #575B59;
+  padding-bottom: 26px;
+}
+.st-wrkp-item .item-img {
+  width: 100%;
+  height: 128px;
+  overflow: hidden;
+  border-radius: 150px;
+}
+
+/*---------------------------------------------------- */
+/*Why choose area*/
+/*----------------------------------------------------*/
+@media only screen and (min-width: 992px) and (max-width: 1199px), only screen and (min-width: 768px) and (max-width: 991px), only screen and (min-width: 576px) and (max-width: 767px), only screen and (min-width: 481px) and (max-width: 575px), (max-width: 480px) {
+  .st-wc-content {
+    gap: 30px;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+}
+
+.st-wc-title {
+  z-index: 1;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  max-width: 500px;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  position: relative;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+.st-wc-title .st-sec-title .sec_title {
+  font-size: 60px;
+  font-weight: 700;
+}
+.st-wc-title .wc-title-desc {
+  max-width: 340px;
+}
+
+.st-wc-list-area {
+  padding-top: 80px;
+  margin-left: 45px;
+}
+@media only screen and (min-width: 1200px) and (max-width: 1399px) {
+  .st-wc-list-area {
+    margin-left: 20px;
+  }
+}
+@media only screen and (min-width: 992px) and (max-width: 1199px), only screen and (min-width: 768px) and (max-width: 991px), only screen and (min-width: 576px) and (max-width: 767px), only screen and (min-width: 481px) and (max-width: 575px), (max-width: 480px) {
+  .st-wc-list-area {
+    gap: 30px;
+    margin-left: 0;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+}
+@media only screen and (min-width: 768px) and (max-width: 991px), only screen and (min-width: 576px) and (max-width: 767px), only screen and (min-width: 481px) and (max-width: 575px), (max-width: 480px) {
+  .st-wc-list-area {
+    padding-top: 0;
+  }
+}
+
+.st-wc-img {
+  max-width: 560px;
+  overflow: hidden;
+  border-radius: 12px;
+  margin-left: -130px;
+}
+@media only screen and (min-width: 992px) and (max-width: 1199px), only screen and (min-width: 768px) and (max-width: 991px), only screen and (min-width: 576px) and (max-width: 767px), only screen and (min-width: 481px) and (max-width: 575px), (max-width: 480px) {
+  .st-wc-img {
+    margin-left: 0;
+  }
+}
+
+.st-wc-list {
+  max-width: 416px;
+  margin-bottom: 58px;
+}
+@media only screen and (min-width: 1200px) and (max-width: 1399px) {
+  .st-wc-list {
+    margin-bottom: 20px;
+  }
+}
+@media only screen and (min-width: 992px) and (max-width: 1199px), only screen and (min-width: 768px) and (max-width: 991px), only screen and (min-width: 576px) and (max-width: 767px), only screen and (min-width: 481px) and (max-width: 575px), (max-width: 480px) {
+  .st-wc-list {
+    margin-bottom: 0;
+  }
+}
+@media only screen and (min-width: 768px) and (max-width: 991px), only screen and (min-width: 576px) and (max-width: 767px), only screen and (min-width: 481px) and (max-width: 575px), (max-width: 480px) {
+  .st-wc-list {
+    max-width: 100%;
+  }
+}
+.st-wc-list:last-child {
+  margin-bottom: 0;
+}
+.st-wc-list h3 {
+  font-size: 22px;
+  font-weight: 600;
+  padding-bottom: 15px;
+}
+.st-wc-list p {
+  font-size: 16px;
+}
+
+.st-scroller-wrap {
+  padding: 0px 24px;
+}
+
+.st-scroller {
+  overflow: hidden;
+  display: flow-root;
+  border-radius: 16px;
+  padding: 25px 0px 0px;
+  background-color: var(--st-prime-c2);
+}
+.st-scroller h2 {
+  line-height: 1;
+  font-size: 52px;
+  font-weight: 700;
+  display: inline-block;
+}
+.st-scroller i {
+  top: -10px;
+  width: 72px;
+  height: 72px;
+  margin: 0px 30px;
+  position: relative;
+  display: inline-block;
+}
+
+/*---------------------------------------------------- */
+/*Testimonial area*/
+/*----------------------------------------------------*/
+.st-testi-sec {
+  margin-top: 8px;
+  padding: 0px 24px;
+}
+
+.st-testi-content {
+  z-index: 1;
+}
+.st-testi-content .st-testi-bg {
+  top: 0;
+  left: 0;
+  z-index: -1;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  border-radius: 16px;
+}
+.st-testi-content .st-sec-title {
+  margin: 0 auto;
+  max-width: 760px;
+}
+.st-testi-content .st-sec-title .sec_title {
+  color: #fff;
+  font-weight: 600;
+}
+
+.st-testi-item {
+  gap: 30px 48px;
+  max-width: 870px;
+  padding: 22px 24px;
+  border-radius: 24px;
+  background: radial-gradient(100% 390.96% at 100% 100%, #FFFFFF 0%, #FFE3D7 50%, #FFFFFF 100%);
+  mix-blend-mode: luminosity;
+}
+.st-testi-item .item-img {
+  width: 240px;
+  height: 364px;
+  overflow: hidden;
+  border-radius: 12px;
+  background-color: #FDD3C1;
+}
+.st-testi-item .item-text {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  max-width: 502px;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+.st-testi-item .item-text li {
+  font-size: 14px;
+  color: var(--st-prime-c);
+}
+.st-testi-item .item-text p {
+  font-size: 23px;
+  padding-top: 20px;
+  font-style: italic;
+  letter-spacing: -0.5px;
+}
+.st-testi-item .item-auth h3 {
+  font-size: 18px;
+  font-weight: 600;
+}
+.st-testi-item .item-auth span {
+  font-size: 14px;
 }
 
 /*---------------------------------------------------- */
