--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3166,6 +3166,11 @@ a:hover, a:focus {
   margin-top: 8px;
   padding: 0px 24px;
 }
+@media only screen and (min-width: 1400px) and (max-width: 1599px), only screen and (min-width: 1200px) and (max-width: 1399px), only screen and (min-width: 992px) and (max-width: 1199px), only screen and (min-width: 768px) and (max-width: 991px), only screen and (min-width: 576px) and (max-width: 767px), only screen and (min-width: 481px) and (max-width: 575px), (max-width: 480px) {
+  .st-testi-sec {
+    padding: 0px 10px;
+  }
+}
 
 .st-testi-content {
   z-index: 1;
@@ -3189,21 +3194,31 @@ a:hover, a:focus {
 }
 
 .st-testi-item {
+  border-radius: 24px;
+  background: radial-gradient(100% 390.96% at 100% 100%, #FFFFFF 0%, #FFE3D7 50%, #FFFFFF 100%);
+}
+.st-testi-item .inner-wrap {
+  z-index: 1;
   gap: 30px 48px;
   max-width: 870px;
   padding: 22px 24px;
-  border-radius: 24px;
-  background: radial-gradient(100% 390.96% at 100% 100%, #FFFFFF 0%, #FFE3D7 50%, #FFFFFF 100%);
+  position: relative;
   mix-blend-mode: luminosity;
 }
-.st-testi-item .item-img {
+@media only screen and (min-width: 576px) and (max-width: 767px), only screen and (min-width: 481px) and (max-width: 575px), (max-width: 480px) {
+  .st-testi-item .inner-wrap {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+}
+.st-testi-item .inner-wrap .item-img {
   width: 240px;
   height: 364px;
   overflow: hidden;
   border-radius: 12px;
   background-color: #FDD3C1;
 }
-.st-testi-item .item-text {
+.st-testi-item .inner-wrap .item-text {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -3216,26 +3231,393 @@ a:hover, a:focus {
       -ms-flex-pack: justify;
           justify-content: space-between;
 }
-.st-testi-item .item-text li {
+.st-testi-item .inner-wrap .item-text li {
   font-size: 14px;
   color: var(--st-prime-c);
 }
-.st-testi-item .item-text p {
+.st-testi-item .inner-wrap .item-text p {
   font-size: 23px;
   padding-top: 20px;
   font-style: italic;
   letter-spacing: -0.5px;
 }
-.st-testi-item .item-auth h3 {
+.st-testi-item .inner-wrap .item-auth h3 {
   font-size: 18px;
   font-weight: 600;
 }
-.st-testi-item .item-auth span {
+.st-testi-item .inner-wrap .item-auth span {
   font-size: 14px;
+}
+
+.st-testi-slider {
+  width: 145%;
+  margin-left: -350px;
+}
+@media only screen and (min-width: 1400px) and (max-width: 1599px), only screen and (min-width: 1200px) and (max-width: 1399px), only screen and (min-width: 992px) and (max-width: 1199px), only screen and (min-width: 768px) and (max-width: 991px), only screen and (min-width: 576px) and (max-width: 767px), only screen and (min-width: 481px) and (max-width: 575px), (max-width: 480px) {
+  .st-testi-slider {
+    width: 100%;
+    margin-left: 0px;
+  }
+}
+
+.swiper-slide-active .st-testi-item {
+  opacity: 1;
+}
+
+.st-testi-pagi .swiper-pagination-bullet {
+  width: 24px;
+  height: 24px;
+  opacity: 1;
+  position: relative;
+  border: 1px solid transparent;
+  background-color: transparent;
+  -webkit-transition: all 500ms ease-in-out;
+  transition: all 500ms ease-in-out;
+}
+.st-testi-pagi .swiper-pagination-bullet:before {
+  top: 8px;
+  left: 8px;
+  width: 6px;
+  height: 6px;
+  content: "";
+  border-radius: 100%;
+  position: absolute;
+  -webkit-transition: all 500ms ease-in-out;
+  transition: all 500ms ease-in-out;
+  background-color: rgba(255, 255, 255, 0.32);
+}
+.st-testi-pagi .swiper-pagination-bullet:is(.swiper-pagination-bullet-active) {
+  border: 1px solid var(--st-prime-c2);
+}
+.st-testi-pagi .swiper-pagination-bullet:is(.swiper-pagination-bullet-active):before {
+  background-color: var(--st-prime-c2);
+}
+
+/*---------------------------------------------------- */
+/*Blog area*/
+/*----------------------------------------------------*/
+.st-blog-sec .st-sec-title {
+  max-width: 730px;
+}
+
+.st-blog-item {
+  max-width: 448px;
+  margin-bottom: 30px;
+}
+.st-blog-item .item-img {
+  overflow: hidden;
+  margin-bottom: 28px;
+  border-radius: 18px;
+}
+.st-blog-item .item-text .item-meta {
+  margin-bottom: 20px;
+}
+.st-blog-item .item-text .item-meta .item_tag {
+  margin-right: 20px;
+}
+.st-blog-item .item-text .item-meta .item_tag a {
+  color: #fff;
+  line-height: 1;
+  font-size: 16px;
+  font-weight: 500;
+  padding: 8px 24px;
+  border-radius: 35px;
+  background-color: #00161A;
+}
+.st-blog-item .item-text .item-meta .item_date {
+  color: #575B59;
+}
+.st-blog-item .item-text .item-meta .item_date i {
+  margin-right: 8px;
+}
+.st-blog-item .item-text .blg_title {
+  font-size: 24px;
+  font-weight: 500;
+}
+
+.st-blog-more {
+  z-index: 1;
+}
+.st-blog-more .st-blog-shape {
+  left: 0;
+  top: -15px;
+  z-index: -1;
+  position: absolute;
+}
+
+/*---------------------------------------------------- */
+/*Contact area*/
+/*----------------------------------------------------*/
+.st-cont-marquee {
+  display: flow-root;
+}
+.st-cont-marquee h2 {
+  line-height: 1;
+  font-weight: 600;
+  font-size: 120px;
+  margin-bottom: 0;
+  display: inline-block;
+  color: rgba(16, 30, 45, 0.2392156863);
+}
+.st-cont-marquee h2:nth-child(3), .st-cont-marquee h2:nth-child(5) {
+  color: #00161A;
+}
+.st-cont-marquee i {
+  top: -15px;
+  width: 56px;
+  height: 56px;
+  color: #00161A;
+  margin: 0 30px;
+  font-size: 25px;
+  position: relative;
+  text-align: center;
+  border-radius: 100%;
+  line-height: 56px;
+  display: inline-block;
+  -webkit-transform: rotate(-45deg);
+          transform: rotate(-45deg);
+  background-color: var(--st-prime-c2);
+}
+
+.st-cont-content {
+  z-index: 1;
+}
+.st-cont-content .st-cont-bg {
+  left: 0;
+  bottom: 0;
+  z-index: -1;
+  width: 100%;
+  height: 100%;
+}
+
+.st-cont-form {
+  overflow: hidden;
+  margin: 0 auto;
+  max-width: 1000px;
+  border-radius: 16px;
+  background-color: #fff;
+}
+.st-cont-form .item-field {
+  margin-top: -1px;
+  margin-right: -1px;
+  padding: 40px 40px 25px;
+  border-right: 1px solid rgba(0, 22, 26, 0.24);
+  border-top: 1px solid rgba(0, 22, 26, 0.24);
+}
+.st-cont-form .item-field label {
+  color: #00161A;
+  display: block;
+  font-size: 18px;
+  font-weight: 500;
+}
+.st-cont-form .item-field input, .st-cont-form .item-field textarea {
+  width: 100%;
+  border: none;
+}
+.st-cont-form .item-field textarea {
+  height: 150px;
+}
+.st-cont-form .item-btn {
+  padding: 30px 40px;
+  border-top: 1px solid rgba(0, 22, 26, 0.24);
+}
+.st-cont-form .item-btn button {
+  gap: 16px;
+  color: #fff;
+  border: none;
+  font-size: 16px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  font-weight: 600;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  border-radius: 6px;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  padding: 10px 10px 10px 20px;
+  font-family: var(--st-heading);
+  background-color: var(--st-prime-c);
+}
+.st-cont-form .item-btn button i {
+  width: 32px;
+  height: 32px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  border-radius: 4px;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  background-color: #fff;
 }
 
 /*---------------------------------------------------- */
 /*Footer Section*/
 /*----------------------------------------------------*/
+.st-footer-sec {
+  background-color: #00161A;
+}
+
+.ed-footer6-widget-area {
+  width: 100%;
+  max-width: 780px;
+}
+@media only screen and (min-width: 1200px) and (max-width: 1399px), only screen and (min-width: 992px) and (max-width: 1199px), only screen and (min-width: 768px) and (max-width: 991px), only screen and (min-width: 576px) and (max-width: 767px), only screen and (min-width: 481px) and (max-width: 575px), (max-width: 480px) {
+  .ed-footer6-widget-area {
+    max-width: 700px;
+  }
+}
+@media only screen and (min-width: 481px) and (max-width: 575px), (max-width: 480px) {
+  .ed-footer6-widget-area .ed-footer6-widget-cont {
+    gap: 30px;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+}
+
+.ed-footer-1-menu li .has-dropdown {
+  padding-top: 14px;
+  padding-left: 20px;
+  display: none;
+}
+
+.ed-footer6-widget .logo-widget {
+  max-width: 420px;
+}
+.ed-footer6-widget .logo-widget p {
+  color: #fff;
+  padding-bottom: 42px;
+}
+.ed-footer6-widget .logo-widget .brand-logo {
+  margin-bottom: 20px;
+}
+.ed-footer6-widget .logo-widget .logo-social {
+  gap: 14px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+.ed-footer6-widget .logo-widget .logo-social a {
+  width: 52px;
+  height: 52px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  color: #FFFFFF;
+  border-radius: 100%;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  background-color: #212227;
+}
+.ed-footer6-widget .logo-widget .logo-social a:hover {
+  background-color: var(--ed-prime-c9);
+}
+
+.ed-footer5-widget {
+  margin-bottom: 30px;
+}
+@media (max-width: 480px) {
+  .ed-footer5-widget {
+    width: 100%;
+  }
+}
+.ed-footer5-widget .widget-title {
+  color: var(--lg-prime-c2);
+  font-size: 16px;
+  font-weight: 500;
+  padding-bottom: 20px;
+}
+@media only screen and (min-width: 768px) and (max-width: 991px), only screen and (min-width: 576px) and (max-width: 767px), only screen and (min-width: 481px) and (max-width: 575px) {
+  .ed-footer5-widget .ed-ft-img {
+    display: none;
+  }
+}
+.ed-footer5-widget .menu-widget li {
+  font-weight: 500;
+  margin-bottom: 12px;
+  font-family: var(--ed-heading-2);
+}
+.ed-footer5-widget .menu-widget li a {
+  color: rgba(255, 255, 255, 0.8);
+  position: relative;
+}
+.ed-footer5-widget .menu-widget li a:hover {
+  color: #FFDA8A;
+  -webkit-transform: translateX(5px);
+          transform: translateX(5px);
+}
+.ed-footer5-widget .menu-widget li:is(.dropdown) a:before {
+  top: 3px;
+  color: rgba(255, 255, 255, 0.8);
+  right: -16px;
+  font-size: 12px;
+  content: "\f078";
+  font-weight: 700;
+  position: absolute;
+  font-family: "Font Awesome 6 Free";
+}
+.ed-footer5-widget .menu-widget li .has-dropdown {
+  padding-left: 0;
+}
+.ed-footer5-widget .menu-widget li .has-dropdown a {
+  font-size: 16px;
+  color: rgb(255, 255, 255);
+}
+.ed-footer5-widget .menu-widget li .has-dropdown a:before {
+  display: none;
+}
+.ed-footer5-widget .menu-widget-2 li {
+  margin-bottom: 12px;
+}
+.ed-footer5-widget .menu-widget-2 li a {
+  padding-left: 14px;
+  position: relative;
+  color: rgba(255, 255, 255, 0.8);
+}
+.ed-footer5-widget .menu-widget-2 li a:before {
+  left: 0;
+  top: 10px;
+  width: 6px;
+  height: 6px;
+  content: "";
+  position: absolute;
+  border-radius: 100%;
+  background-color: #fff;
+}
+.ed-footer5-widget .menu-widget-2 li a:hover {
+  color: #FFDA8A;
+  -webkit-transform: translateX(5px);
+          transform: translateX(5px);
+}
+.ed-footer5-widget .cta-widget {
+  max-width: 260px;
+}
+.ed-footer5-widget .cta-widget .cta-info-item {
+  gap: 10px;
+  margin-bottom: 12px;
+}
+.ed-footer5-widget .cta-widget .cta-info-item .item-icon {
+  width: 20px;
+  font-size: 16px;
+  margin-top: 3px;
+}
+.ed-footer5-widget .cta-widget .cta-info-item .item-icon i {
+  color: var(--lg-prime-c);
+}
+.ed-footer5-widget .cta-widget .cta-info-item .item-text {
+  max-width: 224px;
+  color: rgba(255, 255, 255, 0.8);
+}
+
 /*---------------------------------------------------- */
 /*# sourceMappingURL=style.css.map */
