--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -53,6 +53,16 @@
 /*----------------------------------------------------*/
 @import "home_1/testi";
 /*---------------------------------------------------- */
+/*Blog area*/
+/*----------------------------------------------------*/
+@import "home_1/blog";
+/*---------------------------------------------------- */
+/*Contact area*/
+/*----------------------------------------------------*/
+@import "home_1/contact";
+/*---------------------------------------------------- */
+
+
 
 
 /*Footer Section*/
